<resources>
    <string name="app_name">letterbook</string>
    <string name="perfect_text_tip">填写个人资料不错过缘分~</string>
    <string name="perfect_input_niackname">输入昵称~</string>
    <string name="tab_str_dynamic">动态</string>
    <string name="tab_str_seller">商家</string>
    <string name="tab_str_social">社交</string>
    <string name="tab_str_message">消息</string>
    <string name="tab_str_mine">我的</string>
    <string name="str_seller_history_search">历史搜索</string>
    <string name="str_seller_hot_search">热门搜索</string>
    <string name="pp_format_remain_image">+%1$d</string>
    <string name="search_option_industry_str">行业</string>
    <string name="search_option_distance_str">距离</string>
    <string name="search_option_activites_str">优惠活动</string>
    <string name="edit_done">完成</string>
    <string name="edit">编辑</string>
    <string name="delete_goods">删除(%1$d)</string>
    <string name="rmb_total">¥&#160;%1$.2f</string>
    <string name="rmb_order_total">合计：¥&#160;%1$.2f</string>
    <string name="rmb_all_count">共(%1$d)件商品</string>
    <string name="go_settle_cart">结算(%1$d)</string>
    <string name="rmb_single">¥&#160;%1$.2f</string>
    <string name="goods_num_placeholder">x%d</string>
    <string name="distance_placeholder">距离我的位置%s</string>
    <string name="str_placeholder">%s</string>
    <string name="int_placeholder">%d</string>
    <string name="str_distance_placeholder">距离我的位置%.2f米</string>
    <string name="str_seller_id_placeholder">ID:%d</string>
    <string name="str_brief_placeholder">简介:%s</string>
    <string name="str_yingye_placeholder">营业中·%s - %s</string>
    <string name="str_banner_num_placeholder">%d/%d</string>
    <string name="str_dynamic_time_placeholder">%s · %s · 发表了动态</string>
    <string name="str_dynamic_details_time_placeholder">%s · 发表了动态</string>
    <string name="str_dynamic_wanring_placeholder">尊敬的用户，您发布的内容须遵守相关法律法规和社区规则，请严格遵守相关规定，以免违规。</string>
    <string name="str_emotion">情感状态：%1$s</string>
    <string name="str_city">城市：%1$s</string>
</resources>